# magrathea

./: .gitignore  .prettierrc  CLAUDE.md  biome.json  eslint.config.js  justfile  package-lock.json  package.json  vitest.config.ts
.github/workflows/: rust.yaml  typescript.yaml
crates/celestial/: Cargo.toml
crates/celestial/src/: architecture.rs  architecture_test.rs  metadata.rs  system.rs  system_test.rs
crates/celestial/src/binary/: mod.rs  orbital_params.rs  stability.rs
crates/forge/: Cargo.toml
crates/forge/docs/: generation_concerns.md  moon_system_plan.md  statistical_planetary_system_plan.md
crates/forge/examples/: generate_planets.rs  generate_planets_imf.rs  generate_solar_systems.rs  generate_systems.rs  test_seed_stability.rs
crates/forge/src/: generation.rs  generation_test.rs  lib.rs  moon_generation.rs  moon_generation_test.rs  sampling.rs  sampling_test.rs
crates/forge/src/binary/: generation.rs  mod.rs
crates/magrathea-wasm/: Cargo.toml
crates/magrathea-wasm/src/: disk.rs  lib.rs  stellar.rs
crates/nbody/: Cargo.toml
crates/nbody-wasm/: Cargo.toml
crates/nbody-wasm/src/: lib.rs
crates/nbody/docs/: arena_bhtree_documentation.md  nbody_development_plan.md  nbody_development_plan_2d.md
crates/nbody/examples/: collision_demo.rs  multi_planet.rs  simple_orbit.rs
crates/nbody/src/: arena_bhtree.rs  arena_bhtree_test.rs  body.rs  body_test.rs  integrator.rs  integrator_test.rs  lib.rs  state.rs  state_test.rs
crates/nbody/src/collisions/: detection.rs  detection_test.rs  mod.rs  resolution.rs  resolution_test.rs
crates/nbody/src/forces/: gravity.rs  gravity_test.rs  mod.rs  tree_gravity.rs  tree_gravity_test.rs
crates/planetary/: Cargo.toml
crates/planetary-generator/: Cargo.toml
crates/planetary-generator/docs/: csv_analysis.md
crates/planetary-generator/examples/: generate_planets.rs  generate_planets_imf.rs  generate_solar_systems.rs  generate_systems.rs  test_seed_stability.rs
crates/planetary-generator/src/: generation.rs  generation_test.rs  lib.rs  sampling.rs  sampling_test.rs
crates/planetary-generator/src/binary/: generation.rs  mod.rs
crates/planetary-wasm/: Cargo.toml
crates/planetary-wasm/src/: lib.rs  stellar.rs  system.rs
crates/planetary/docs/: GENERATOR_ASSESSMENT.md  OCCURRENCE_RATES.md  PLAN.md  composition_migration_plan.md  planet_classification_plan.md  remnant_stellar_systems.md  rocky_body_composition.md  statistical_planetary_system_plan.md  unified_system_design.md
crates/planetary/examples/: generate_planets.rs  generate_planets_imf.rs  generate_solar_systems.rs  generate_systems.rs
crates/planetary/src/: atmosphere.rs  atmosphere_test.rs  composition.rs  composition_test.rs  generation.rs  generation_test.rs  geology.rs  geology_test.rs  interior.rs  interior_test.rs  lib.rs  metadata.rs  moon.rs  moon_test.rs  planet.rs  planet_class.rs  planet_class_test.rs  planet_test.rs  planet_type.rs  planet_type_test.rs  sampling.rs  sampling_test.rs  system.rs  system_test.rs  temperature.rs  temperature_test.rs  variation.rs  variation_test.rs
crates/protodisk/: Cargo.toml
crates/protodisk/docs/: binary-systems-notes.md  disk_model_plan.md  particle_bin_plan.md
crates/protodisk/examples/: emergent_formation.rs
crates/protodisk/src/: lib.rs
crates/protodisk/src/bodies/: discrete_body.rs  discrete_body_test.rs  envelope.rs  envelope_evolution_test.rs  growth_integration_test.rs  migration.rs  mod.rs  orbital_elements.rs  orbital_elements_test.rs
crates/protodisk/src/disk/: disk_model.rs  gas_disk.rs  gas_disk_test.rs  grid_disk.rs  grid_disk_test.rs  mod.rs  photoevaporation.rs  photoevaporation_test.rs
crates/protodisk/src/particles/: coagulation.rs  coagulation_test.rs  collision_outcome.rs  mod.rs  particle.rs  particle_bin.rs  particle_bin_test.rs  particle_test.rs  size_distribution.rs
crates/protodisk/src/simulation/: driver.rs  integration_test.rs  mod.rs  state.rs  timestep.rs
crates/protodisk/tests/: simulation_integration.rs
crates/star-system/: Cargo.toml
crates/star-system/src/: architecture.rs  architecture_test.rs  lib.rs  metadata.rs  metadata_test.rs  system.rs  system_test.rs
crates/star-system/src/binary/: stability.rs
crates/stellar/: Cargo.toml
crates/stellar-forge/: Cargo.toml
crates/stellar-forge/docs/: emergent_simulation_plan.md  particle_bin_size_resolution.md
crates/stellar-forge/src/: lib.rs
crates/stellar-forge/src/binary/: generation.rs  mod.rs  stability.rs
crates/stellar/src/: generation.rs  generation_test.rs  lib.rs  sampling.rs  sampling_test.rs  spectral.rs  spectral_test.rs  stellar_color.rs  stellar_color_test.rs  stellar_objects.rs  stellar_radius.rs
crates/system-generator/: Cargo.toml
crates/system-generator/docs/: mass_radius_issues.md  statistical_planetary_system_plan.md
crates/system-generator/examples/: generate_planets.rs  generate_planets_imf.rs  generate_solar_systems.rs  generate_systems.rs  planets_imf.csv  test_seed_stability.rs
crates/system-generator/src/: generation.rs
crates/units/: Cargo.toml  README.md
crates/units/src/: angular_velocity.rs  density.rs  float.rs  length.rs  length_test.rs  lib.rs  mass.rs  mass_rate.rs  mass_rate_test.rs  mass_test.rs  pressure.rs  surface_density.rs  surface_density_test.rs  temperature.rs  temperature_test.rs  time.rs  time_test.rs  velocity.rs  velocity_test.rs  volume_density.rs  volume_density_test.rs
(+30 files in other folders)
