[package]
name = "forge"
version = "0.1.0"
edition = "2024"

[dependencies]
celestial = { path = "../celestial" }
planetary = { path = "../planetary" }
stellar = { path = "../stellar" }
protodisk = { path = "../protodisk" }
units = { path = "../units" }

rand = "0.9"
rand_chacha = "0.9"
rand_distr = "0.5"
serde = "1.0"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
