[package]
name = "nbody-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for the nbody N-body simulation crate"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nbody = { path = "../nbody" }
stellar = { path = "../stellar" }
units = { path = "../units" }
nalgebra = "0.34"

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
