[package]
name = "planetary-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for statistical planetary system generation"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
planetary = { path = "../planetary", features = ["tsify"] }
system-generator = { path = "../system-generator" }
star-system = { path = "../star-system", features = ["tsify"] }
stellar = { path = "../stellar", features = ["tsify"] }
protodisk = { path = "../protodisk" }
units = { path = "../units" }

wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9"
rand_chacha = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.11", features = ["v4", "v5", "serde", "js"] }
tsify-next = "0.5"

[dev-dependencies]
wasm-bindgen-test = "0.3"
