[package]
name = "planetary"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
serde = "1.0.228"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }

stellar = { path = "../stellar" }
units = { path = "../units" }

[dev-dependencies]
approx = "0.5.1"
