[package]
name = "planetary"
version = "0.1.0"
edition = "2024"

[features]
default = []
tsify = ["dep:tsify-next", "dep:wasm-bindgen"]

[dependencies]
rand = "0.9.2"
serde = "1.0.228"
tsify-next = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

units = { path = "../units" }

[dev-dependencies]
approx = "0.5.1"
rand_chacha = "0.9.0"
