[package]
name = "star-system"
version = "0.1.0"
edition = "2024"

[features]
default = []
tsify = ["dep:tsify-next", "dep:wasm-bindgen", "planetary/tsify", "stellar/tsify"]

[dependencies]
planetary = { path = "../planetary" }
stellar = { path = "../stellar" }
stellar_forge = { path = "../stellar-forge" }
units = { path = "../units" }

rand = "0.9"
rand_chacha = "0.9"
serde = "1.0"
uuid = { version = "1.11", features = ["v4", "v5", "serde"] }
tsify-next = { version = "0.5", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
